# llm-council-governance

./: .env.example  .gitignore  CLAUDE.md  INSTRUCTIONS.md  README.md  nextsteps.md  pyproject.toml
backend/: __init__.py  config.py  openrouter.py  persona_variants.py  prompt_variants.py
backend/evaluation/: __init__.py  aimo.py  base.py  gsm8k.py  mmlu.py  mmlu_pro.py  truthfulqa.py
backend/governance/: __init__.py  agenda_veto.py  base.py  deliberate_synthesize.py  deliberate_vote.py  independent_rank_synthesize.py  (+10 more)
experiments/: __init__.py  __main__.py  analyze_council_size.py  analyze_deliberation_dynamics.py  analyze_persona_experiment.py  analyze_pilot.py  analyze_prompt_experiment.py  config_loader.py  manifest.py  reanalyze_pilot.py  run_council_size.py  run_mmlu_pro_final.py  run_persona_experiment.py  run_pilot.py  run_prompt_experiment.py  run_voting_comparison.py  stats.py
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
scripts/: __init__.py  check_setup.py
tests/: __init__.py  test_agenda_veto.py  test_analyze_deliberation_dynamics.py  test_analyze_pilot.py  test_analyze_prompt_experiment.py  test_benchmarks.py  test_council_size.py  test_experiment_runner.py  test_governance_base.py  test_integration.py  test_persona_experiment.py  test_persona_variants.py  test_prompt_experiment.py  test_prompt_variants.py  test_self_consistency_vote.py  test_setup.py  test_stats.py  test_structure_a.py  test_structure_b.py  test_structure_c.py  test_structure_d.py  test_utils.py  test_voting_strategies.py  test_weighted_vote.py
(+15 files in other folders)
