[project]
name = "llm-council-governance"
version = "0.1.0"
description = "Experimental framework comparing LLM council governance structures"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
